(Merged) Added BusinessObjectToString for the TransactionLog for better user identification of the BO being logged. Added paramaterised Sql for the TransactionLogTable and GetUser method in the TransactionLogTable now uses the ISecurityController to get the currently looged on user. Also fixed the DirtyXml of the BO and BOPropCol to be properly formed. The </Properties> tag and </"ClassName> tags were missing and also the ID is surrounded by quotes. This was needed so that reporting on the TransactionLogTable which has the DirtyXml is possible. Updated TransactionCommitterDB so that it uses the specified Database Connection. Updated BusinessObject so that it uses the correct Database Connection for committing. Added ISecurityController interface for providing a method for accessing the Current User Name. Added BusinessObjectLastUpdatePropertiesLog implementation for IBusinessObjectUpdateLog that updates the UserLastUpdated and DateLastUpdated properties on a BusinessObject.

--- a/source/Habanero.Base/Habanero.Base.csproj
+++ b/source/Habanero.Base/Habanero.Base.csproj
@@ -106,6 +106,7 @@
     <Compile Include="IBusinessObjectCollection.cs" />
     <Compile Include="IBusinessObjectDeletor.cs" />
     <Compile Include="IClassDef.cs" />
+    <Compile Include="IBusinessObjectUpdateLog.cs" />
     <Compile Include="IConcurrencyControl.cs" />
     <Compile Include="IDBNumberGenerator.cs" />
     <Compile Include="IKeyDef.cs" />
@@ -122,6 +123,7 @@
     <Compile Include="IRelKey.cs" />
     <Compile Include="IRelProp.cs" />
     <Compile Include="ISelectQuery.cs" />
+    <Compile Include="ISecurityController.cs" />
     <Compile Include="ISupportsAutoIncrementingField.cs" />
     <Compile Include="ITransactional.cs" />
     <Compile Include="ITransactionalDB.cs" />
