--- a/source/Habanero.UI.Win/Habanero.UI.Win.csproj
+++ b/source/Habanero.UI.Win/Habanero.UI.Win.csproj
@@ -99,6 +99,9 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="HabaneroAppWin.cs" />
+    <Compile Include="HelpAboutBoxWin.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="LabelWin.cs">
       <SubType>Component</SubType>
     </Compile>
