--- a/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
+++ b/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
@@ -80,6 +80,7 @@
     <Compile Include="ButtonsControl\TestButtonGroupControl.cs" />
     <Compile Include="TestDialogResult.cs" />
     <Compile Include="TestInputFormComboBox.cs" />
+    <Compile Include="TestInputFormDate.cs" />
     <Compile Include="TestOKCancelDialog.cs" />
     <Compile Include="TestTextBox.cs" />
     <Compile Include="Controllers\TestComboBoxCollectionController.cs" />
