--- a/source/Habanero.UI.Win/Habanero.UI.Win.csproj
+++ b/source/Habanero.UI.Win/Habanero.UI.Win.csproj
@@ -98,6 +98,12 @@
     <Compile Include="GridBaseWin.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Grid\DataGridViewCheckBoxColumnWin.cs" />
+    <Compile Include="Grid\DataGridViewColumnWin.cs" />
+    <Compile Include="Grid\DataGridViewComboBoxColumnWin.cs" />
+    <Compile Include="Grid\EditableGridButtonsControlWin.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="HabaneroAppWin.cs" />
     <Compile Include="HelpAboutBoxWin.cs">
       <SubType>Form</SubType>
