Completed porting of ReadOnlyGridControl for Win (ie got the tests running) Also ported FilterControlWin. Extracted a ButtonGroupControlManager and ported ButtonGroupControl to Win

--- a/source/Habanero.UI.Base/Habanero.UI.Base.csproj
+++ b/source/Habanero.UI.Base/Habanero.UI.Base.csproj
@@ -96,6 +96,7 @@
     <Compile Include="IListViewItem.cs" />
     <Compile Include="IListViewItemCollection.cs" />
     <Compile Include="ISelectedListViewItemCollection.cs" />
+    <Compile Include="ReadOnlyGridButtonsControlManager.cs" />
     <Compile Include="Util\CustomValidationEventArgs.cs" />
     <Compile Include="Util\GlobalUIRegistry.cs" />
     <Compile Include="Grid\IDataGridView.cs" />
