Added JoinField to Source.Join, describing the Join more fully. Refactored SelectQueryDB a little, using the new Source class. Created a SourceDB which can generate a JOIN sql clause.

--- a/source/Habanero.Base/Habanero.Base.csproj
+++ b/source/Habanero.Base/Habanero.Base.csproj
@@ -108,6 +108,7 @@
     <Compile Include="IClassDef.cs" />
     <Compile Include="IBusinessObjectUpdateLog.cs" />
     <Compile Include="IConcurrencyControl.cs" />
+    <Compile Include="ISqlFormatter.cs" />
     <Compile Include="IDBNumberGenerator.cs" />
     <Compile Include="IKeyDef.cs" />
     <Compile Include="InvalidPropertyException.cs" />
@@ -227,6 +228,7 @@
     <Compile Include="QueryField.cs" />
     <Compile Include="RSAPasswordCrypter.cs" />
     <Compile Include="Source.cs" />
+    <Compile Include="SqlFormatter.cs" />
     <Compile Include="XMLWrapper.cs" />
   </ItemGroup>
   <ItemGroup>
