Added RelatedObjectClassDef to IRelationship Changed BusinessObject to no longer have any references to DatabaseConnection.    Removed Redundant constructors. Modified BusinessObjectLoaderDB to use the ObjectManager and to implement GetRelatedBusinessObjectCollection Modified BusinessObjectLoaderInMemory to use the ObjectManager and to implement GetRelatedBusinessObjectCollection Modified Relationship to use BusinessObjectLoader. Created an ObjectManager to replace AllLoadedBusinessObjectCollection.

--- a/source/Habanero.Bo/Habanero.Bo.csproj
+++ b/source/Habanero.Bo/Habanero.Bo.csproj
@@ -137,6 +137,7 @@
     <Compile Include="ConcurrencyControl\PessimisticLockingDB.cs" />
     <Compile Include="NumberGenerator\NumberGenerator.cs" />
     <Compile Include="NumberGenerator\NumberGeneratorPessimisticLocking.cs" />
+    <Compile Include="ObjectManager\BusObjectManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
