Removed Methods from IBusinessObjectCollection that involve extraCriteria Moved BusinessObjectCollection that uses ISelectQuery for its queries and BusinessObjectLoader for loading. Added capabilities to load a BusinessObjectCollection using string Criteria and string orderCriteria. Added capabilities to BusinessObjectLoader to load collections using string Criteria and string orderCriteria. Moved all most uses of BOLoader to use BusinessObjectLoader Created CriteriaExpression and CriteriaParser.cs for parsing a criteria string to a criteria object.

--- a/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
+++ b/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
@@ -129,8 +129,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CriteriaParser.cs" />
-    <Compile Include="TestCriteriaParser.cs" />
+    <Compile Include="CriteriaManager\TestCriteriaParser.cs" />
+    <Compile Include="CriteriaManager\TestHabaneroStringBuilder.cs" />
+    <Compile Include="TestBusinessObjectLoader_GetBusinessObjectCollection.cs" />
     <Compile Include="TestPack\AddressTestBO.cs" />
     <Compile Include="ClassDefinition\TestTriggerCol.cs" />
     <Compile Include="ClassDefinition\TestTrigger.cs" />
@@ -167,7 +168,7 @@
     <Compile Include="TestBORegistry.cs" />
     <Compile Include="TestBusinessObjectLoader.cs" />
     <Compile Include="TestBusObjectManager.cs" />
-    <Compile Include="TestCriteria.cs" />
+    <Compile Include="CriteriaManager\TestCriteria.cs" />
     <Compile Include="TestSqlFormatter.cs" />
     <Compile Include="TestDataStoreInMemory.cs" />
     <Compile Include="TestBusinessObjectLastUpdatePropertiesLog.cs" />
@@ -187,7 +188,7 @@
     <Compile Include="SqlGeneration\TestDeleteStatementGenerator.cs" />
     <Compile Include="SqlGeneration\TestUpdateStatementGenerator.cs" />
     <Compile Include="TestBOKeyCol.cs" />
-    <Compile Include="CriteriaManager\TestCriteriaParser.cs" />
+    <Compile Include="CriteriaManager\TestCriteriaExpression.cs" />
     <Compile Include="CriteriaManager\TestExpression.cs" />
     <Compile Include="Loaders\TestDtdsResource.cs" />
     <Compile Include="Loaders\TestXmlSuperClassLoader.cs" />
