--- a/source/Habanero.Base/Habanero.Base.csproj
+++ b/source/Habanero.Base/Habanero.Base.csproj
@@ -94,10 +94,13 @@
     <Compile Include="BOKeyEventArgs.cs" />
     <Compile Include="BOPropCol.cs" />
     <Compile Include="BOPropEventArgs.cs" />
-    <Compile Include="Criteria.cs" />
+    <Compile Include="Criteria\Criteria.cs" />
+    <Compile Include="Criteria\CriteriaExpression.cs" />
+    <Compile Include="Criteria\CriteriaParser.cs" />
     <Compile Include="Exceptions\InvalidObjectIdException.cs" />
     <Compile Include="Exceptions\InvalidXmlDefinitionException.cs" />
     <Compile Include="HabaneroApp.cs" />
+    <Compile Include="Criteria\HabaneroStringBuilder.cs" />
     <Compile Include="IApplicationVersionUpgrader.cs" />
     <Compile Include="IBOKey.cs" />
     <Compile Include="IBOProp.cs" />
