--- a/source/Habanero.Base/Habanero.Base.csproj
+++ b/source/Habanero.Base/Habanero.Base.csproj
@@ -95,6 +95,7 @@
     <Compile Include="BOPropCol.cs" />
     <Compile Include="BOPropEventArgs.cs" />
     <Compile Include="Criteria\Criteria.cs" />
+    <Compile Include="Criteria\CriteriaDB.cs" />
     <Compile Include="Criteria\CriteriaExpression.cs" />
     <Compile Include="Criteria\CriteriaParser.cs" />
     <Compile Include="Exceptions\InvalidObjectIdException.cs" />
