--- a/source/Habanero.Base/Habanero.Base.csproj
+++ b/source/Habanero.Base/Habanero.Base.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Criteria\CriteriaDB.cs" />
     <Compile Include="Criteria\CriteriaExpression.cs" />
     <Compile Include="Criteria\CriteriaParser.cs" />
+    <Compile Include="DateTimeToday.cs" />
     <Compile Include="Exceptions\InvalidObjectIdException.cs" />
     <Compile Include="Exceptions\InvalidXmlDefinitionException.cs" />
     <Compile Include="HabaneroApp.cs" />
