Moved TransactionLogBusObj to Habanero.Bo project from Habanero.Test.Bo project.

--- a/source/Habanero.Bo/Habanero.Bo.csproj
+++ b/source/Habanero.Bo/Habanero.Bo.csproj
@@ -343,6 +343,7 @@
     <Compile Include="TransactionalBusinessObjectDB.cs" />
     <Compile Include="TransactionCommitterDB.cs" />
     <Compile Include="TransactionCommitter.cs" />
+    <Compile Include="TransactionLogBusObj.cs" />
     <Compile Include="TransactionLogTable.cs">
       <SubType>Code</SubType>
     </Compile>
