Added More operators. Added failing test for the operators not yet implemented.

--- a/source/Habanero.Test/Habanero.Test.csproj
+++ b/source/Habanero.Test/Habanero.Test.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="Address.cs" />
     <Compile Include="ArchitectureTest.cs" />
+    <Compile Include="Base\TestDateTimeNow.cs" />
     <Compile Include="Base\TestDateTimeToday.cs" />
     <Compile Include="Base\TestGlobalRegistry.cs" />
     <Compile Include="Base\TestHabaneroApp.cs" />
