--- a/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
+++ b/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
@@ -115,6 +115,10 @@
       <Project>{D04BB138-C144-4406-9A41-17192E7D44BF}</Project>
       <Name>Habanero.Base</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Habanero.Test.Structure\Habanero.Test.Structure.csproj">
+      <Project>{D59DAD41-663F-4AD7-9B22-04C2A7D7F9C2}</Project>
+      <Name>Habanero.Test.Structure</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Habanero.Test\Habanero.Test.csproj">
       <Project>{B965CBBC-48BE-4761-9AB8-8F1AD17B8537}</Project>
       <Name>Habanero.Test</Name>
@@ -170,6 +174,7 @@
     <Compile Include="TestBusinessObjectLoader.cs" />
     <Compile Include="TestBusObjectManager.cs" />
     <Compile Include="CriteriaManager\TestCriteria.cs" />
+    <Compile Include="TestQueryBuilderWithInheritance.cs" />
     <Compile Include="TestSqlFormatter.cs" />
     <Compile Include="TestDataStoreInMemory.cs" />
     <Compile Include="TestBusinessObjectLastUpdatePropertiesLog.cs" />
