--- a/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
+++ b/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
@@ -175,6 +175,8 @@
     <Compile Include="TestBusObjectManager.cs" />
     <Compile Include="CriteriaManager\TestCriteria.cs" />
     <Compile Include="TestQueryBuilderWithInheritance.cs" />
+    <Compile Include="TestSource_Join.cs" />
+    <Compile Include="TestSource_JoinList.cs" />
     <Compile Include="TestSqlFormatter.cs" />
     <Compile Include="TestDataStoreInMemory.cs" />
     <Compile Include="TestBusinessObjectLastUpdatePropertiesLog.cs" />
