--- a/source/Habanero.Test.Structure/Habanero.Test.Structure.csproj
+++ b/source/Habanero.Test.Structure/Habanero.Test.Structure.csproj
@@ -9,6 +9,8 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Habanero.Test.Structure</RootNamespace>
     <AssemblyName>Habanero.Test.Structure</AssemblyName>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>key.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -82,6 +84,9 @@
       <DependentUpon>Person.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="..\Common\AssemblyInfoShared.cs">
+      <Link>Properties\AssemblyInfoShared.cs</Link>
+    </Compile>
     <Compile Include="SetupDatabase.cs" />
     <Compile Include="TestSetupDatabase.cs" />
     <Compile Include="Vehicle.cs" />
@@ -112,6 +117,9 @@
       <Name>Habanero.Test</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="key.snk" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
@@ -122,7 +130,7 @@
   -->
   <!-- NB: These build events MUST be after the above project import  -->
   <PropertyGroup>
-    <PostBuildEvent>copy "$(ProjectDir)ClassDefs.xml" "$(SolutionDir)ToBeDeleted\$(OutDir)"</PostBuildEvent>
+    <PostBuildEvent>"$(SolutionDir)PostBuild.cmd" "$(SolutionDir)"  "$(TargetDir)"</PostBuildEvent>
     <PreBuildEvent />
   </PropertyGroup>
 </Project>
